--- a/Crystal.html
+++ b/Crystal.html
@@ -32,7 +32,7 @@
       float:left;
       font: 20px;
       height:50px;
-      width:50px;
+      width:800px;
       position:absolute;
     }
 
@@ -58,15 +58,20 @@
 // THen create four buttons with the four rupee images you found, and assign each a value.
 
 // VARIABLES
-var target = Math. round(Math. random()*100) + 1;
-$("#targetnumber").text(target)
+var target = Math. round(Math. random()*120) + 19;
+$("#targetnumber").text(target);
+
 
 var counter = 0;
+var wins = 0;
+var loss = 0;
 
-var options = [Math.round(Math.random()*20+1),
-Math.round(Math.random()*20+1),
-Math.round(Math.random()*20+1),
-Math.round(Math.random()*20+1)];
+$("#targetnumber").append("    ----Wins: " + wins + " ----Losses: " + loss);
+
+var options = [Math.round(Math.random()*12+1),
+Math.round(Math.random()*12+1),
+Math.round(Math.random()*12+1),
+Math.round(Math.random()*12+1)];
 
 // Loop to create crystals for every option.
 
@@ -115,12 +120,14 @@ alert("Your score: " + counter);
 
   if (counter === target) {
       alert("You win!")
-
+        wins++;
   }
 
   else if (counter >= target) {
     alert("You lose!!");
+    loss = loss +1;
   }
+
 
 });
 
