--- a/Crystal.html
+++ b/Crystal.html
@@ -5,12 +5,16 @@
 
 	<!--Jquery Link  -->
 <script src="https://code.jquery.com/jquery.js"></script>
+<!-- What's broken...
+
+Crystal values won't reset at the if statements. 
+
+TNeed the button to reset wins and losses.
+
+Both of these seem like scope problems. Can't override the global values of the crystals or the wins and losses. 
 
 
-<!-- Added a link to Bootstrap-->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
- -->
-<!-- <link rel="stylesheet" type="text/css" src="assets/images/style.css">
+
  -->
 
 <style type="text/css">
@@ -80,86 +84,147 @@
 // THen create four buttons with the four rupee images you found, and assign each a value.
 
 // VARIABLES
-var target = Math. round(Math. random()*120) + 19;
+
+ $(document).ready(function() {
+
+
+
+
+
+// GLOBAL SCOPE VARIABLES =================================
+
+// generates a random no. b/t 1 and 20 to use for testing. Displays that no. in the targetnumber div. 
+// var target = Math.floor((Math.random() * 102 ) +19);
+var target = Math.floor((Math.random() * 20) +1); 
 $("#targetnumber").text(target);
 
 
 var counter = 0;
 var wins = 0;
 var loss = 0;
+    // displays the wins and losses in the .winslosses div.
+$(".winslosses").text("Wins " + wins + "Losses " + loss);
+    // generates 4 random numbers between 1 and 12. 
+var options = [Math.floor((Math.random()*12)+1),
+Math.floor((Math.random()*12)+1),
+Math.floor((Math.random()*12)+1),
+Math.floor((Math.random()*12)+1)];
 
-$(".winslosses").append("Wins: " + wins + "---Losses: " + loss);
-
-var options = [Math.round(Math.random()*12+1),
-Math.round(Math.random()*12+1),
-Math.round(Math.random()*12+1),
-Math.round(Math.random()*12+1)];
-
-// Loop to create crystals for every option.
 
 for (var i = 0; i < options.length; i++) {
 
-  //Each iteration, we will create an <img> tag.
-
-  var image = $("<img>");
 
 
-  // Crystals will get the class .rupee
-  image.addClass("rupee-image");
 
-// each crystal is given a src to the crystal image.
+  var image = $("<img class='rupee-image' src='https:ih0.redbubble.net/image.31622460.1172/sticker,375x360.png'>");
 
-image.attr("src", "https://ih0.redbubble.net/image.31622460.1172/sticker,375x360.png");
-// THen each gets a data attribute called data-rupeeValue
+
+
 
 image.attr("data-rupeeValue", options[i]);
 
-// Finally, each image gets added to the page with all the above designations.
 $(".crystals").append(image);
-}
+};
 
-// Now, we will have one click event function for all crystals
+
+
 
 
 $(".rupee-image").on("click", function(){
-
-// we now extract the value of each crystal from the data attribute. 
-// using $(this) specifies that we should extract the crystal value of the clicked crystal
-// the .attr(data-rupeeValue) grabs the value out of the "data-rupeeValue" attribute. 
-// since attributes on html elements are strings, we must convert it to a string. 
 
 var rupeeValue = ($(this).attr("data-rupeeValue"))
   ;
 
   rupeeValue= parseInt(rupeeValue);
-  // then we add the rupeeValue to the user's counter, which is a global variable, which will be added to no matter which crystal we click.
 
   counter += rupeeValue;
 
+
+
+
+
+
+
+
+
 // Lose/Win logic goes below. 
+
+var reset = function () { 
+
+
+counter = 0;
+
+// Tried to reset global crystal values below... 
+
+
+
+ var options = [Math.floor((Math.random()*12)+1),
+Math.floor((Math.random()*12)+1),
+Math.floor((Math.random()*12)+1),
+Math.floor((Math.random()*12)+1)];
+
+
+for (var i = 0; i < options.length; i++) {
+
+
+
+
+image.attr("data-rupeeValue", options[i]);
+
+};  
+
+// ==============
+
+
+target = Math.floor((Math.random() * 20) + 1);
+
+$("#targetnumber").text(target);
+
+
+
+}; 
+
 
 alert("Your score: " + counter);
 
   if (counter === target) {
       alert("You win!")
         wins++;
-  }
+        $(".winslosses").text("Wins " + wins + "Losses " + loss);
 
+        reset()
+        ;    
+} 
   else if (counter >= target) {
     alert("You lose!!");
-    loss = loss +1;
-  }
+        loss++;
+        $(".winslosses").text("Wins " + wins + "Losses " + loss);
+
+reset();
+
+};
+
+
 
 
 });
 
+// made a reset button to reset the wins and losses. 
+// var resetbutton = $("<button id='reset'>");
+// resetbutton.html("Click here to reset wins and losses.");
+// $("body").append(resetbutton);
+// $(".resetbutton").on("click", function() {
+// wins = 0;
+// loss = 0;
 
 
+// });
+
+// write in 
+
+}); // end document ready 
 
 
-
-// when you click one, your own counter will appear. 
-// this counter should update with each successive click of each rupee. 
 
 	
 </script>
